adding ipynb type
Signed-off-by: Oleksandra Blyshchak <oleksandra.blyschak@gmail.com>

--- a/homework_26, math statistics/task_2.ipynb
+++ b/homework_26, math statistics/task_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,26 @@
     "\n",
     "object_math = MathStat([10, 13, 10, 9, 9, 12, 12, 6, 7, 9, 8, 9, 11, 9, 14, 13, 9, 8, 8, 7, 10, 10, 11, 11, 11, 12, 8, 7, 9 ,10, 14, 13, 8, 8, 9, 10, 11, 11, 12, 12])\n",
     "object_drow = Draw(object_math)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             1      2     3    4      5      6       7       8      9\n",
+      "X = x_i  6.000  7.000  8.00  9.0  10.00  11.00  12.000  13.000  14.00\n",
+      "Ni       1.000  3.000  6.00  8.0   6.00   6.00   5.000   3.000   2.00\n",
+      "Wi       0.025  0.075  0.15  0.2   0.15   0.15   0.125   0.075   0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(object_drow.table())"
    ]
   },
   {
