k-fold validation, finish tasks
Signed-off-by: Oleksandra Blyshchak <oleksandra.blyschak@gmail.com>

--- a/homework_36, valid, k-fold/task_1.ipynb
+++ b/homework_36, valid, k-fold/task_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "68d19b97",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,12 @@
     "\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from sklearn.linear_model import LinearRegression as LR  \n",
-    "from sklearn.model_selection import KFold, cross_val_score, LeaveOneOut, train_test_split"
+    "from sklearn.model_selection import KFold, cross_val_score, train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "e5da8bca",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "470fe827",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "max     9.200000  95.000000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6f82d1c5",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4d697982",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "<AxesSubplot: xlabel='Hours', ylabel='Scores'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "643e66bf",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a50075ae",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "455c8606",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6f453cc0",
    "metadata": {},
    "outputs": [],
@@ -211,40 +211,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "fc83647a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_score(model, X_train, X_test, Y_train, Y_test):\n",
+    "def get_score_rmse(model, X_train, X_test, Y_train, Y_test):\n",
     "    model.fit(X_train, Y_train)\n",
-    "    return model.score(X_test, Y_test)"
+    "    rmse = np.sqrt(model.score(X_test, Y_test))\n",
+    "    return rmse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "43ecdaaa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9487647340257012"
+       "0.9740455502827889"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_score(LR(), x_train, x_test, y_train,  y_test)"
+    "get_score_rmse(LR(), x_train, x_test, y_train,  y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "48ffcda3",
    "metadata": {},
    "outputs": [],
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "d3d712b8",
    "metadata": {},
    "outputs": [],
@@ -264,7 +265,7 @@
     "    for train_index, test_index in k_folds.split(x, y):\n",
     "        X_train, X_test, Y_train, Y_test = X[train_index], X[test_index], \\\n",
     "        Y[train_index], Y[test_index]\n",
-    "        score_fold = get_score(model, X_train, X_test, Y_train, Y_test)\n",
+    "        score_fold = get_score_rmse(model, X_train, X_test, Y_train, Y_test)\n",
     "        print(score_fold)\n",
     "        new_dict[score_fold] = x[train_index], x[test_index], \\\n",
     "        y[train_index], y[test_index]\n",
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "626c94fd",
    "metadata": {},
    "outputs": [
@@ -283,12 +284,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9678055545167994\n",
-      "0.7494974280770879\n",
-      "0.9088154519064063\n",
-      "0.9404375240567291\n",
-      "0.9541450664986234\n",
-      "We have some problems with array for LinearRegression() model: minimal score is 0.7494974280770879  for array (array([[2.5],\n",
+      "0.9837710884737361\n",
+      "0.8657351951244029\n",
+      "0.9533181273354694\n",
+      "0.9697615810376946\n",
+      "0.976803494311227\n",
+      "We have some problems with array for LinearRegression() model: minimal score is 0.8657351951244029  for array (array([[2.5],\n",
       "       [3.2],\n",
       "       [8.5],\n",
       "       [3.5],\n",
@@ -313,7 +314,7 @@
       "       [3.3],\n",
       "       [3.8]]), array([21, 27, 75, 30, 88, 60, 81, 85, 62, 41, 17, 95, 30, 24, 67, 69, 30,\n",
       "       54, 76, 86], dtype=int64), array([47, 20, 25, 42, 35], dtype=int64))\n",
-      "{0.9678055545167994: (array([[5.1],\n",
+      "{0.9837710884737361: (array([[5.1],\n",
       "       [3.2],\n",
       "       [8.5],\n",
       "       [3.5],\n",
@@ -337,7 +338,7 @@
       "       [5.9],\n",
       "       [2.5],\n",
       "       [6.9]]), array([47, 27, 75, 30, 20, 88, 60, 25, 85, 41, 42, 17, 95, 24, 67, 69, 30,\n",
-      "       54, 35, 86], dtype=int64), array([21, 81, 62, 30, 76], dtype=int64)), 0.7494974280770879: (array([[2.5],\n",
+      "       54, 35, 86], dtype=int64), array([21, 81, 62, 30, 76], dtype=int64)), 0.8657351951244029: (array([[2.5],\n",
       "       [3.2],\n",
       "       [8.5],\n",
       "       [3.5],\n",
@@ -361,7 +362,7 @@
       "       [2.7],\n",
       "       [3.3],\n",
       "       [3.8]]), array([21, 27, 75, 30, 88, 60, 81, 85, 62, 41, 17, 95, 30, 24, 67, 69, 30,\n",
-      "       54, 76, 86], dtype=int64), array([47, 20, 25, 42, 35], dtype=int64)), 0.9088154519064063: (array([[2.5],\n",
+      "       54, 76, 86], dtype=int64), array([47, 20, 25, 42, 35], dtype=int64)), 0.9533181273354694: (array([[2.5],\n",
       "       [5.1],\n",
       "       [1.5],\n",
       "       [9.2],\n",
@@ -385,7 +386,7 @@
       "       [3.5],\n",
       "       [4.5],\n",
       "       [8.9]]), array([21, 47, 20, 88, 60, 81, 25, 85, 62, 42, 17, 30, 24, 67, 69, 30, 54,\n",
-      "       35, 76, 86], dtype=int64), array([27, 75, 30, 41, 95], dtype=int64)), 0.9404375240567291: (array([[2.5],\n",
+      "       35, 76, 86], dtype=int64), array([27, 75, 30, 41, 95], dtype=int64)), 0.9697615810376946: (array([[2.5],\n",
       "       [5.1],\n",
       "       [3.2],\n",
       "       [8.5],\n",
@@ -409,7 +410,7 @@
       "       [2.7],\n",
       "       [4.8],\n",
       "       [7.8]]), array([21, 47, 27, 75, 30, 20, 88, 60, 81, 25, 85, 62, 41, 42, 17, 95, 30,\n",
-      "       69, 35, 76], dtype=int64), array([24, 67, 30, 54, 86], dtype=int64)), 0.9541450664986234: (array([[2.5],\n",
+      "       69, 35, 76], dtype=int64), array([24, 67, 30, 54, 86], dtype=int64)), 0.976803494311227: (array([[2.5],\n",
       "       [5.1],\n",
       "       [3.2],\n",
       "       [8.5],\n",
@@ -443,24 +444,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "86d83b27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9041402050111291"
+       "array([0.98377109, 0.8657352 , 0.95331813, 0.96976158, 0.97680349])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scores = cross_val_score(model, x, y, cv = k_folds)\n",
-    "scores.mean()"
+    "np.sqrt(scores)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e3cd4b42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9508628739261666"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(scores.mean())"
    ]
   },
   {
@@ -468,8 +490,17 @@
    "id": "dd7de794",
    "metadata": {},
    "source": [
-    "В данній задачі я використала метод оцінки перевірки машинного навчання - K-Fold(к-кратна крос валідація). Обрала я цей метод, тому що він є найпопулярнішим серед запропонованих та найбільш точним у своєму вімірюванні, та досить зрозумілим."
+    "В данній задачі я використала метод оцінки перевірки машинного навчання - K-Fold(к-кратна крос валідація). Обрала я цей метод, тому що він є найпопулярнішим серед запропонованих та найбільш точним у своєму вімірюванні, та досить зрозумілим.\n",
+    "За отриманими даними можемо сказати, що модель може бути використана як істинна, але необхідно додати ще даних для навчання для більш точної оцінки. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "395d8374",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
